integrate with angular2-highcharts

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="card-container">
-  <h1 x-large class="sample-content">Your Content Here</h1>
+  <h1 x-large class="sample-content">Your <a href="https://github.com/gevgeny/angular2-highcharts" target="_blank">Angular2-Highcharts</a> Here</h1>
+
+  <chart [options]="options"></chart>
 
   <div>
     For material design components use the <a href="https://github.com/AngularClass/angular2-webpack-starter/tree/material2"><b>material2</b></a> branch
