update to styling by CSS

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,3 +6,9 @@ html, body{
 span.active {
   background-color: gray;
 }
+
+.highcharts-background {
+  fill: #efefef;
+  stroke: #a4edba;
+  stroke-width: 2px;
+}
